--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Express yourself on the townhall bulletin board, speak your mind and let the world read your truth" />
+    <meta name="keywords" content="Blog website, Blog, Social Media,Content creation, React, Vite" />
+    <meta name="author" content="XavyTech" />
+    <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Townhall Bulletin Board">
+<meta name="twitter:description" content="Express yourself on the townhall bulletin board, speak your mind and let the world read your truth">
+<meta name="twitter:image" content="/favicon.svg">
+<meta property="og:title" content="Townhall Bulletin Board">
+<meta property="og:description" content="Express yourself on the townhall bulletin board, speak your mind and let the world read your truth">
+<meta property="og:image" content="/favicon.svg">
+<meta property="og:url" content="https://gqlblog-mozx.onrender.com">
+<meta property="og:type" content="website">
+
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
